--- a/app/src/main/res/layout/item_pocket_with_image.xml
+++ b/app/src/main/res/layout/item_pocket_with_image.xml
@@ -19,6 +19,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+        <View
+            android:id="@+id/v_delete"
+            android:visibility="gone"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/holo_red_light"
+            android:layout_width="48dp"
+            android:layout_height="48dp"/>
+
     </android.support.v7.widget.CardView>
 
 
