--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,24 @@
 
     <com.tonyjs.pocketview.PocketView
         android:id="@+id/pocket_view"
-        android:padding="16dp"
+        android:paddingTop="63dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingBottom="12dp"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/slip_target"
+        android:paddingLeft="12dp"
+        android:text="I am SlipTargetView"
+        android:textColor="@android:color/white"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:gravity="center_vertical"
+        android:background="@android:color/darker_gray"
+        android:layout_width="match_parent"
+        android:layout_height="51dp"/>
+
 </RelativeLayout>
