--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,6 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
+    <item android:id="@+id/action_with_network"
+        android:title="with_network"
+        android:orderInCategory="97"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_add"
         android:title="add"
         android:orderInCategory="98"
